little css change

--- a/style.css
+++ b/style.css
@@ -116,4 +116,5 @@ h1:hover {
     box-shadow: 0 0.5em 0.5rem -0.4em #f1ff5c;
     transform: translateY(-0.25em);
     cursor: pointer;
+    border-radius: .5em;
 }
